fix(button): change text align to center fix(gameState) add style for fullscreen btn

--- a/packages/client/src/components/ui/button/button.pcss
+++ b/packages/client/src/components/ui/button/button.pcss
@@ -13,7 +13,7 @@
   font-weight: 700;
   line-height: 24px;
   letter-spacing: 0;
-  text-align: left;
+  text-align: center;
   color: var(--white);
 
   &:hover {
